# python-GPU

./: .gitignore  README.md  pyproject.toml
python_gpu/: __init__.py  colour.py  sample.py
scripts/: example.py  run.py
