[tool.poetry]
name = "python-gpu"
version = "0.1.0"
description = ""
authors = ["JJMorton <jjmorton1636@gmail.com>"]
readme = "README.md"
packages = [{include = "python_gpu"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pyopencl = "^2022.3.1"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
